[gd_scene load_steps=8 format=3 uid="uid://bkvs83hnc26an"]

[ext_resource type="PackedScene" uid="uid://bd2hhntyqbksl" path="res://actors/brains/Brain.tscn" id="1"]
[ext_resource type="Script" uid="uid://jok5x5yuea0r" path="res://actors/brains/CPUBrain.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bf2ddnyt7s7n5" path="res://assets/sprites/signs/X.png" id="3"]
[ext_resource type="FontFile" uid="uid://dprehv4eo4p4u" path="res://assets/fonts/Pixel-Powerline-440555/Pixel Powerline.otf" id="4"]

[sub_resource type="GDScript" id="2"]
script/source = "extends Node2D

func _process(delta):
	global_rotation = 0
"

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("4")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="CircleShape2D" id="3"]
radius = 500.0

[node name="CPUBrain" instance=ExtResource("1")]
script = ExtResource("2")
debug = false
target_location_jitter = 50.0
random_dash_p = 0.04
random_fire_p = 0.01
think_time = 0.2
think_time_jitter = 0.04
start_time_jitter = 0.5

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." index="0"]
path_desired_distance = 50.0
target_desired_distance = 50.0

[node name="ThinkTimer" type="Timer" parent="." index="1"]
wait_time = 0.4

[node name="ReleaseTimer" type="Timer" parent="." index="2"]
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="." index="3"]
wait_time = 0.2
one_shot = true

[node name="DebugSprite" type="Sprite2D" parent="." index="4"]
visible = false
scale = Vector2(0.25, 0.25)
texture = ExtResource("3")

[node name="Path3D" type="Line2D" parent="DebugSprite" index="0"]
unique_name_in_owner = true
width = 40.0
default_color = Color(1, 1, 1, 0.262745)

[node name="NoRotate" type="Node2D" parent="." index="5"]
script = SubResource("2")

[node name="StanceLabel" type="Label" parent="NoRotate" index="0"]
unique_name_in_owner = true
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 200.0
theme_override_fonts/font = SubResource("1")
uppercase = true

[node name="StrategyLabel" type="Label" parent="NoRotate" index="1"]
unique_name_in_owner = true
modulate = Color(1, 0.733333, 0.388235, 1)
offset_left = -200.0
offset_top = 200.0
offset_right = 200.0
offset_bottom = 300.0
theme_override_fonts/font = SubResource("1")
uppercase = true

[node name="DangerArea2D" type="Area2D" parent="." index="6"]
position = Vector2(500, 0)
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="DangerArea2D" index="0"]
shape = SubResource("3")

[connection signal="path_changed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_path_changed"]
[connection signal="timeout" from="ThinkTimer" to="." method="_on_ThinkTimer_timeout"]
[connection signal="timeout" from="ReleaseTimer" to="." method="_on_ReleaseTimer_timeout"]
